--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -2,10 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
+    android:background="@color/black"
     android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".Registro">
 
     <LinearLayout
@@ -14,6 +15,14 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:textColor="@color/white"
+            android:text="REGISTRO"
+            android:gravity="center"/>
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -21,6 +30,9 @@
                 android:id="@+id/correoEt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:hint="@string/correoEt"
                 android:inputType="textEmailAddress"
@@ -34,6 +46,9 @@
                 android:id="@+id/passEt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:hint="@string/passEt"
                 android:inputType="textPassword"
@@ -47,6 +62,9 @@
                 android:id="@+id/nombreEt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="20sp"
                 android:layout_marginTop="10dp"
                 android:hint="@string/nombreEt"
                 android:inputType="text"
@@ -60,6 +78,7 @@
                 android:id="@+id/fechaEt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:hint="@string/fechaEt"
@@ -68,6 +87,7 @@
 
         <Button
             android:id="@+id/btnRegistrar"
+            android:background="@drawable/boton_personalizado"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
