--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     tools:context=".Splash">
 
     <LinearLayout
@@ -12,11 +13,32 @@
         android:orientation="vertical"
         android:gravity="center">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:layout_marginTop="70dp"
+            android:textColor="@color/black"
+            android:text="@string/textSplash"/>
+
         <ImageView
-            android:layout_width="400dp"
-            android:layout_height="400dp"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/logo"
             android:contentDescription="TODO" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="581dp"
+            android:layout_height="260dp"
+            android:layout_marginStart="15dp"
+            app:lottie_autoPlay="true"
+
+            app:lottie_fileName="burbujas.json"
+            app:lottie_imageAssetsFolder="assets"
+            app:lottie_loop="true" />
+
+
     </LinearLayout>
 
 </RelativeLayout>
